bug in dark mode toggle fixed

--- a/css/main.scss
+++ b/css/main.scss
@@ -4,7 +4,7 @@
 $body-typeface: "Iowan Old Style", Palatino, "Palatino Linotype", "Book Antiqua", Georgia, serif;
 $text-width: 650px;
 
-html, html[data-theme="light"] {
+html {
   --bold-color: rgb(0, 0, 0);
   --box-background-color: rgb(249, 249, 250);//hsl(0, 0%, 90%);
   --highlight-color: hsl(0, 0%, 80%);
@@ -19,24 +19,48 @@ html, html[data-theme="light"] {
   --underline-color: hsl(0, 0%, 60%);
 }
 
-@media (prefers-color-scheme: dark) {
-    html {
-      content: "dark";
-    }
-}
-
-html[data-theme="dark"] {
+html[date-theme="dark"] {
   --bold-color: rgb(255, 255, 255);
   --box-background-color: hsl(0, 0%, 20%);
-  --highlight-color: hsl(0, 0%, 60%);
-  --light-border-color: hsl(0, 0%, 30%);
-  --light-text-color: rgb(199, 199, 204);
-  --link-color: rgb( 100, 210, 255);
-  --link-color-visited: hsl(250, 100%, 60%);
-  --main-background-color: rgb(28, 28, 30);
-  --main-text-color: rgb(229, 229, 234);
-  --medium-text-color: hsl(0, 0%, 70%);
-  --underline-color: hsl(0, 0%, 50%);
+      --highlight-color: hsl(0, 0%, 60%);
+      --light-border-color: hsl(0, 0%, 30%);
+      --light-text-color: rgb(199, 199, 204);
+      --link-color: rgb( 100, 210, 255);
+      --link-color-visited: hsl(250, 100%, 60%);
+      --main-background-color: rgb(28, 28, 30);
+      --main-text-color: rgb(229, 229, 234);
+      --medium-text-color: hsl(0, 0%, 70%);
+      --underline-color: hsl(0, 0%, 50%); 
+}
+@media (prefers-color-scheme: dark) {
+    html {
+      --bold-color: rgb(255, 255, 255);
+      --box-background-color: hsl(0, 0%, 20%);
+      --highlight-color: hsl(0, 0%, 60%);
+      --light-border-color: hsl(0, 0%, 30%);
+      --light-text-color: rgb(199, 199, 204);
+      --link-color: rgb( 100, 210, 255);
+      --link-color-visited: hsl(250, 100%, 60%);
+      --main-background-color: rgb(28, 28, 30);
+      --main-text-color: rgb(229, 229, 234);
+      --medium-text-color: hsl(0, 0%, 70%);
+      --underline-color: hsl(0, 0%, 50%); 
+    }
+
+    html[data-theme="light"] {
+  --bold-color: rgb(0, 0, 0);
+  --box-background-color: rgb(249, 249, 250);//hsl(0, 0%, 90%);
+  --highlight-color: hsl(0, 0%, 80%);
+  --light-border-color: rgb(230, 230, 230);//hsl(0, 0%, 42%);//hsl(0, 0%, 80%);
+  --light-text-color: rgb(72, 72, 74);//hsl(0, 0%, 35%);
+  --link-color: rgb(0, 112, 201);//hsl(218, 85%, 43%); 
+  --link-color-visited: hsl(250, 100%, 37%);
+  --main-background-color: rgb(255, 255, 255);//hsl(0, 0%, 99%);
+  --main-text-color: rgb(51, 51, 51);//rgb(28, 28, 30);//hsl(0, 0%, 11%);
+  --medium-text-color: hsl(0, 0%, 20%);
+  --sidebar-color: hsl(0, 0%, 90%);
+  --underline-color: hsl(0, 0%, 60%);
+} 
 }
 
 :root {
